# le-code_practice-windows

./: .gitattributes  .gitignore  LICENSE  README.md
Assignments/CPP/2024/test_2024_11_8/: CMakeLists.txt  main.cpp  test.cpp
Assignments/CPP/2024/test_2024_5_5/: CMakeLists.txt  main.cpp  test.cpp
Assignments/CPP/2024/test_2024_5_5/data/: salary.txt
Assignments/Python/: test_2024_10_31_19_41.py  test_2024_11_24_10_05.py  test_2024_11_24_9_24.py  test_2024_12_10_12_49.py  test_2024_12_28_11_28.py  test_2024_8_25_21_57.py  test_2024_8_26_16_16.py
C Project/test_2023_12_7/: xmake.lua
C++ Project/Data Structure and Algorithms/: CMakeLists.txt  CMakeSettings.json  CircleListBase.h  DbLinkList.h  DynamicArray.h  LinkListBase.h  ListBase.h  SimpleCircleList.h  SimpleLkList.h  SqList.h  circle_list_base.h  dynamic_array.h  link_list_base.h  main.cpp  simple_circle_list.h  simple_lk_list.h  sq_list.h  sq_stack.h
C++ Project/Flight Booking System/: logindialog.cpp  res.qrc
C++Project/AeroplaneWars/: Bomb.cpp  Bomb.h  EnemyPlane.cpp  HeroPlane.cpp  config.h  main.cpp  mainScene.cpp  mainScene.h
C++Project/FlightBookingSystem/: CMakeLists.txt  adminwindow.ui  logindialog.h  logindialog.ui  userwindow.cpp  userwindow.h  userwindow.ui
C++Project/test_2024_2_29/: xmake.lua
CPP_Projects/Aeroplane_Wars/: Bullet.h  Map.cpp  Map.h
CPP_Projects/Data_Structure_and_Algorithms/: Data_Structure_and_Algorithms.sln  db_link_list.h  link_list_base.h  link_stack.h  main.cpp  node.h  xmake.lua
CPP_Projects/Data_Structure_and_Algorithms-main/: .gitignore  xmake.lua
CPP_Projects/Flight_Booking_System/: README.md
CProject/test_2023_12_7/: CMakeLists.txt  contact.c  contact.h  main.c
CProject/test_2024_1_29/: test_2024_1_29.sln
C_Projects/test_2024_11_1/: CMakeLists.txt  main.c
Homework/: test_2023_12_10_10_30.c  test_2023_12_10_11_26.c  test_2023_12_10_12_10.c  test_2023_12_11_23_41.c  test_2023_12_12_10_06.c  test_2023_12_12_10_40.c  test_2023_12_12_13_38.c  test_2023_12_12_13_51.c  test_2023_12_12_14_23.c  test_2023_12_12_14_39.c  test_2023_12_12_14_47.c  test_2023_12_12_15_24.c  test_2023_12_12_15_46.c  test_2023_12_12_16_44.c  test_2023_12_12_16_45.c  test_2023_12_12_17_21.c  test_2023_12_12_8_46.c  test_2023_12_12_9_08.c  test_2023_12_12_9_30.c  test_2023_12_13_11_15.c  test_2023_12_13_11_43.c  test_2023_12_13_12_43.c  test_2023_12_14_8_18.c  test_2023_12_17_12_44.c  test_2023_12_17_12_59.c  test_2023_12_17_13_14.c  test_2023_12_17_14_30.c  test_2023_12_17_15_37.c  test_2023_12_7_0_52.c  test_2023_12_7_10_22.c  test_2023_12_7_10_37.c  test_2023_12_7_13_31.c  test_2023_12_7_17_07.c  test_2023_12_7_17_48.c  test_2023_12_7_18_11.c  test_2023_12_7_18_19.c  test_2023_12_7_19_51.c  test_2023_12_7_20_51.c  test_2023_12_7_8_06.c  test_2023_12_7_8_46.c  (+11 more)
Homework/ASM/: test_2024_2_17_2_52.asm
Homework/C/: test_12_23.txt  test_2023.c  test_2023_12_12_16_44.c  test_2023_12_12_17_21.c  test_2023_12_13_10_16.c  test_2023_12_13_11_15.c  test_2023_12_13_19_51.c  test_2023_12_13_20_19.c  test_2023_12_16_17_11.c  test_2023_12_17_11_43.c  test_2023_12_17_11_54.c  test_2023_12_17_12_11.c  test_2023_12_19_14_57.c  test_2023_12_21_17_26.c  test_2023_12_22_16_29.c  test_2023_12_23_11_15.c  test_2023_12_23_11_46.c  test_2023_12_23_12_50.c  test_2023_12_23_15_42.c  test_2023_12_23_20_28.c  test_2023_12_23_21_06.c  test_2023_12_23_21_33.c  test_2023_12_23_21_58.c  test_2023_12_24_10_50.c  test_2023_12_24_11_19.c  test_2023_12_24_12_01.c  test_2023_12_24_12_02.c  test_2023_12_24_12_24.c  test_2023_12_24_13_03.c  test_2023_12_25_17_10.c  test_2023_12_25_20_24.c  test_2023_12_28_11_34.c  test_2023_12_28_12_42.c  test_2023_12_28_17_32.c  test_2023_12_30_12_00.c  test_2023_12_30_13_55.c  test_2023_12_30_14_28.c  test_2023_12_7_8_06.c  test_2023_12_7_8_52.c  test_2024_1_2_14_13.c  (+8 more)
Homework/C++/: test_2023_12_17_22_55.cpp
Homework/CPP/: test_2023_12_18_17_58.cpp
Homework/HTML/: test_2024_5_14.html
Homework/MATLAB/: test_2024_5_10.m
Homework/Python/: Problem_C_Data_Wordle.xlsx  test_2023_12_17_22_48.py  test_2024_1_18_8_35.py  test_2024_1_25_14_24.py  test_2024_1_25_16_34.py  test_2024_1_25_19_50.py  test_2024_1_25_21_10.py  test_2024_1_27_11_19.py  test_2024_1_27_16_19.py  test_2024_1_27_17_13.py  test_2024_1_27_17_42.py  test_2024_1_27_20_32.py  test_2024_1_27_23_13.py  test_2024_1_28_10_32.py  test_2024_1_28_11_44.py  test_2024_1_28_1_09.py  test_2024_1_28_2_23.py  test_2024_3_11_9_02.py  test_2024_3_12_13_43.py  test_2024_3_21_16_29.py  test_2024_3_24_18_34.py  test_2024_3_26_8_41.py  test_2024_3_26_9_51.py  test_2024_3_27_10_09.py  test_2024_3_27_23_45.py  test_2024_5_22_12_36.py  test_2024_5_27_10_58.py  test_2024_7_10_10_33.py  test_2024_8_23_15_01.py  test_2024_8_25_21_57.py  test_2024_8_26_16_16.py  test_2024_8_26_17_58.py  test_2024_8_27_9_46.py  test_2024_8_28_20_30.py  test_2024_8_28_21_11.py  test_2024_9_25_0_18.py  test_2024_9_26_15_01.py  text_2024_4_17_20_24.py
Jupter Notebook/test_2024_3_15/: test_2024_3_15.ipynb  test_2024_3_15_2.py  test_2024_3_15_3.py
Machine_Learning/: SVM_1.py
PythonProject/: test_2023_12_7.py
Reinforcement_Learning/: Sarsa.ipynb
assignments/cpp/2024/test_2024_9_12/: CMakeLists.txt
java-projects/pacman/: pom.xml
practice/qt/test_2024_5_29/: CMakeLists.txt
projects/cpp/aeroplane-wars/: CMakeLists.txt
(+2968 files in other folders)
