cmake_minimum_required(VERSION 3.29)
project(test_2024_9_12)

set(CMAKE_CXX_STANDARD 20)

add_executable(test_2024_9_12 main.cpp
        ListBase.h
        SqList.h
        Node.h
        LinkListBase.h
        SimpleLinkList.h
        DblLinkList.h
        DblLinkList.h
        CircleListBase.h
        SimpleCircleList.h
        DblCircleList.h)
